# layercode-create-app

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: contributing.md  index.md
docs/agents/: built-in.md  custom.md  overview.md
docs/api/: agents.md  cli.md  sdk.md  server.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: deployment.md  observability.md  troubleshooting.md
src/layercode_create_app/: __init__.py  cli.py  config.py  logging.py  tunnel.py
src/layercode_create_app/agents/: __init__.py  bakery.py  base.py  echo.py  outdoor_shop.py  slow_agent.py  starter.py
src/layercode_create_app/agents/prompts/: bakery.txt  outdoor_shop.txt  starter.txt
src/layercode_create_app/sdk/: __init__.py  auth.py  events.py  stream.py
src/layercode_create_app/server/: __init__.py  app.py  conversation.py
tests/: conftest.py  test_events.py  test_sdk_stream.py  test_signature.py
